Change value egypt

--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
 
     <!-- Main Container -->
     <div class="container content">
-
       <!-- Country and City and date -->
       <div class="country-and-date">
         <div class="country">
@@ -74,7 +73,7 @@
             <option value="الجزائر">الجزائر</option>
             <option value="البحرين">البحرين</option>
             <option value="كندا">كندا</option>
-            <option value="مصر">مصر</option>
+            <option value="Egypt">مصر</option>
             <option value="إندونيسيا">إندونيسيا</option>
             <option value="إيران">إيران</option>
             <option value="العراق">العراق</option>
@@ -85,7 +84,7 @@
             <option value="لبنان">لبنان</option>
             <option value="ليبيا">ليبيا</option>
             <option value="موريتانيا">موريتانيا</option>
-            <option value="هولندا">هولندا</option>
+            <option value="Netherlands">هولندا</option>
             <option value="بولندا">بولندا</option>
             <option value="البرتغال">البرتغال</option>
             <option value="قطر">قطر</option>
